fix: overflow when searching a user

--- a/srcs/frontend/src/friends/friends.css
+++ b/srcs/frontend/src/friends/friends.css
@@ -133,17 +133,19 @@
     }
 
     .search-result-item {
-        @apply flex items-center p-2;
+        @apply flex flex-wrap items-center p-2 gap-2;
         @apply border-b border-gray-700;
         @apply cursor-pointer hover:bg-gray-700;
     }
 
     .search-result-item img {
-        @apply w-8 h-8 rounded-full mr-2.5;
+        @apply w-8 h-8 rounded-full;
     }
 
     .search-result-item span {
-        @apply flex-1;
+        @apply flex-1 min-w-0 break-words;
+        min-width: 0;
+        word-break: break-word;
     }
 
     .add-friend-btn {
